src/tests/typing/fail/index_out_of_range.tj
fn rec<n>() = (a)
    if (n > 0) then
        a = rec<n-1>()
    else 
        a = 1[8]
    end if

module main() = (b)
    shared b = ()
    n:
        b = rec<10>()
    until